# StrydeProjects

./: .gitignore  README.md  environment.yml  install_env.sh  pyproject.toml
data/: README.md
notebooks/GDAS_07_12_2023/: Correct_SensorResponse.ipynb  Correct_SensorResponse_2ms.ipynb
notebooks/StrydeTraining_26_09_2023/: Correct_SensorResponse.ipynb
pystryde/: cmap.py  preproc.py  reader.py  stats.py  utils.py  visual.py
